src/np222kk/dv507/a2/test/cases/positive/test_variable_shadowing.ofp
void main() {
    int i = 1;
    if (i == 1) {
        char i = 'c';
        if (i == 'c') {
            float i = 1.0;
            if (i == 1.0) {
                
            }
        }
    }
}